# RAG-based_notes_helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ask.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
data/: notes_helper.md
src/rag_notes_helper/: cli.py
src/rag_notes_helper/core/: config.py
src/rag_notes_helper/eval/: dataset_builder.py  embedding.py  eval_runner.py  llm.py  rag_runner.py  ragas_runner.py
src/rag_notes_helper/eval/testset/: base.json
src/rag_notes_helper/rag/: answer.py  chunking.py  index.py  ingest.py  loaders.py  meta_store.py  retrieval.py
src/rag_notes_helper/rag/llm/: __init__.py  base.py  gemini_api.py  hf.py  hf_api.py  ollama.py  ollama_api.py  openai_api.py  router.py
src/rag_notes_helper/utils/: logger.py  timer.py
tests/: conftest.py  test_answer.py  test_chunking.py  test_index.py  test_ingest.py  test_loaders.py  test_meta_store.py  test_retrieval.py
