[project]
name = "rag-notes-helper"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "numpy>=1.24",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.6.1",
  "huggingface-hub>=0.36.0",
  "openai>=2.14.0",
  "tqdm>=4.67.1",
  "google-genai>=1.59.0",
]

[project.scripts]
rag-app = "rag_notes_helper.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

