[project]
name = "rag-notes-helper"
version = "0.2.0"
requires-python = ">=3.11"

dependencies = [
  "pydantic-settings>=2.2.1",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "google-genai>=1.0.0",
  "numpy>=1.26.0",
  "huggingface-hub>=0.36.0",
  "openai>=2.14.0",
  "tqdm>=4.67.1",
  "pymupdf>=1.26.7",
]

[dependency-groups]
dev = [
  "datasets>=4.8.3",
  "langchain-google-genai>=4.2.1",
  "langchain-huggingface>=1.2.1",
  "langchain-ollama>=1.0.1",
  "pytest>=8.0.0",
  "ragas>=0.4.3",
]

[project.scripts]
rag-app = "rag_notes_helper.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["-q"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:.*SwigPyPacked.*:DeprecationWarning",
  "ignore:.*SwigPyObject.*:DeprecationWarning",
  "ignore:.*swigvarlink.*:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
index = [
    { name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", explicit = true }
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/rag_notes_helper"]
